# Girl_bot

./: .env-samlpe  .gitignore  Dockerfile  Dockerfile.app  Dockerfile.backend  README.md  app copy.py  app.py  docker-compose.yaml  main.py  pyproject.toml  text_test.txt
 .github/workflows/: ci-cd.yaml
.github/workflows/: CI_CD.yml  ci-cd.yaml  ci-cd.yml
modules/: llm_setup.py  mem0_config.py  profiles.py  pydantic_models.py
